--- a/.github/workflows/reusable-workflow1.yml
+++ b/.github/workflows/reusable-workflow1.yml
@@ -12,8 +12,9 @@ jobs:
   example_job:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Run a script
-        run: echo "This is an example input: ${{ inputs.example_input }}"
+        shell: bash
+        run: |
+          echo "This is an example input: ${{ inputs.example_input }}"
