--- a/.github/workflows/reusable-workflow2.yml
+++ b/.github/workflows/reusable-workflow2.yml
@@ -15,4 +15,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run a script
-        run: echo "This is an example input: ${{ inputs.example_input }}"
+        run: |
+         echo "This is an example input: ${{ inputs.example_input }}"
