--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,13 +13,13 @@ jobs:
 
   deploy-prod:
     needs: setup
-    uses: .github/workflows/reusable-deploy.yml
+    uses: .github/workflows/reusable/deploy.yml
     with:
       environment: "production"
       region: "us-east-1"
 
-  notify-success:
-    needs: deploy-prod
-    uses: .github/workflows/reusable-notify.yml
-    with:
-      message: "Deployment to production succeeded!"
+#   notify-success:
+#     needs: deploy-prod
+#     uses: .github/workflows/reusable/notify.yml
+#     with:
+#       message: "Deployment to production succeeded!"
