--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,12 @@ jobs:
         with:
           tools: "terraform,python,yq"
 
-  deploy-prod:
-    needs: setup
-    uses: .github/workflows/reusable/deploy.yml
-    with:
-      environment: "production"
-      region: "us-east-1"
+#   deploy-prod:
+#     needs: setup
+#     uses: .github/workflows/reusable/deploy.yml
+#     with:
+#       environment: "production"
+#       region: "us-east-1"
 
 #   notify-success:
 #     needs: deploy-prod
