adding repo files

--- a/.github/workflows/reusable/notify.yml
+++ b/.github/workflows/reusable/notify.yml
@@ -9,7 +9,7 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/actions/notify-slack
+      - uses: .github/actions/notify-slack
         with:
           message: "${{ inputs.message }}"
           status: "INFO"
