--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,15 +11,15 @@ jobs:
         with:
           tools: "terraform,python,yq"
 
-#   deploy-prod:
-#     needs: setup
-#     uses: .github/workflows/reusable/deploy.yml
-#     with:
-#       environment: "production"
-#       region: "us-east-1"
+  deploy-prod:
+    needs: setup
+    uses: .github/workflows/reusable/deploy.yml@main
+    with:
+      environment: "production"
+      region: "us-east-1"
 
-#   notify-success:
-#     needs: deploy-prod
-#     uses: .github/workflows/reusable/notify.yml
-#     with:
-#       message: "Deployment to production succeeded!"
+  notify-success:
+    needs: deploy-prod
+    uses: .github/workflows/reusable/notify.yml@main
+    with:
+      message: "Deployment to production succeeded!"
